# documind

./: .env.example  .gitignore  README.md  app.py  index.html  pyproject.toml  pytest.ini  requirements.txt  setup.py
api/: main.py
core/: __init__.py  document_processor.py  embeddings.py  llm_chain.py  retriever.py  vision_parser.py
documind/: __init__.py
tests/: __init__.py  test_llm_chain.py  test_processor.py  test_retriever.py
utils/: __init__.py  chunking.py  preprocessing.py
